# llm-feedback

./: .gitignore  blogposts.json  chats.json  setup_structure.py  test.py
data/: sessions.json
gpt_journal_app/: app.py  pyproject.toml  readme.md  readme.md.bak
gpt_journal_app/core/: chat.py  llm.py  prompts.py  storage.py  utils.py
gpt_journal_app/features/: blogpost.py  reflection.py  review_goal.py  tracking.py
gpt_journal_app/tools/: llm_correct.py
